Support for web-socket identity provider signing types
WsX509 as alternative to VaultX509 FabricSigningCredentialType
Include secure-identities directory with code for web-socket based identities
- ws-identity server used to connect fabric applicaiton and external client
- ws-wallet crypto wallet of external client
- ws-identity-client for backend connections between ws-identity, ws-wallet and fabric app
